Add time series split

--- a/gru9_momentum_trading_faisal.ipynb
+++ b/gru9_momentum_trading_faisal.ipynb
@@ -104,7 +104,7 @@
         "\n",
         "sns.set()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
         "SPY = SPY[['SPY']]#.resample('D').mean().shift(1).fillna(method='ffill')\n",
         "EIDO = EIDO[['EIDO']]#.resample('D').mean().shift(1).fillna(method='ffill')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -171,7 +171,7 @@
         "jci_value['date'] = pd.to_datetime(jci_value['date'], format='%d/%m/%Y')\n",
         "jci_value = jci_value.set_index('date').sort_index()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -186,7 +186,7 @@
         "df = df.merge(IDX30, how='left', left_index=True, right_index=True).copy()\n",
         "df = df.merge(jci_value[['for_flow','dom_total','tot_buy']], how='left', left_index=True, right_index=True).copy()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -220,7 +220,7 @@
         "    vals[outlier_idx] = rolling_median[outlier_idx] \n",
         "    return outlier_idx, vals"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
         "tot_outlier[~outlier_idx] = np.nan\n",
         "df['total_buy_filtered'] = total_buy_filtered"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,7 +267,7 @@
         "\n",
         "df = df[df.index >= '2012-04-24'].copy()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,7 +302,7 @@
         "df['for_flow_ma'] = df['for_flow_filtered'].rolling(7).mean()\n",
         "df['total_val_grad'] = df['total_buy_filtered'].rolling(3).mean() - df['total_buy_filtered'].rolling(11).mean().shift(3)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -325,7 +325,7 @@
         "    pred = (pred*STD) + MEAN\n",
         "    return K.mean(K.equal(K.sign(true), K.sign(pred)))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -349,7 +349,7 @@
         "                                                                     index=train_result['date'].values).to_dict())\n",
         "    return pred,true,train_result"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -384,7 +384,7 @@
         "    model.compile(optimizer=tf.keras.optimizers.SGD(learning_rate=0.05, decay = 1e-7, momentum=0.05), loss='squared_hinge', metrics=[sign_accuracy])\n",
         "    return model"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -400,7 +400,7 @@
         "    model.compile(optimizer='adam', loss=loss_function, metrics=[sign_accuracy])\n",
         "    return model"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -417,7 +417,7 @@
         "    model.compile(optimizer='adam', loss=loss_function, metrics=[sign_accuracy])\n",
         "    return model"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -435,7 +435,7 @@
         "def target_transform(x, mean=MEAN_pre_filtered, std=STD_pre_filtered):\n",
         "    return (x - MEAN)/STD"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,7 +451,7 @@
         "    df_test2 = df[(df.index >= range3) & (df.index < range4)].copy()\n",
         "    return df_train, df_test, df_test2"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -472,7 +472,7 @@
         "#         ax[i,0].set_ylim(0,ylim)\n",
         "    plt.tight_layout()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -510,7 +510,7 @@
         "                   hover_data=df.columns)\n",
         "fig.show()\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,7 +605,7 @@
         "highacc_combi = list(combi[i] for i in [4, 14, 21, 28])\n",
         "highacc_combi"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,7 +642,7 @@
         "span = 4\n",
         "d = highacc_combi[1]"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -671,7 +671,7 @@
         "# Final Sanity Check\n",
         "df2[(df2.index > '2020-11-09')][input_variables + [target_variables]]"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -875,7 +875,7 @@
         "\n",
         "print(input_features_list[1:])"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -899,9 +899,13 @@
         "grid = pd.DataFrame() \n",
         "\n",
         "model_list = [create_model, multi_gru_model]\n",
+        "model_type_name = ['create_model', 'multi_gru_model']\n",
         "\n",
-        "for model_sample in model_list:\n",
-        "  for input_variables in tqdm(input_features_list):\n",
+        "date_ranges_list = [['2014-01-01','2015-02-01'],['2015-01-01','2016-02-01'],['2016-01-01','2017-02-01'],\n",
+        "                   ['2017-01-01','2018-02-01'],['2018-01-01','2019-02-01'],['2019-01-01','2020-02-01']]\n",
+        "\n",
+        "for date_range in date_ranges_list:\n",
+        "  for model_type in tqdm(model_list):\n",
         "    df_train = df2[(df2.index < '2019-01-01')].copy()\n",
         "    df_test = df2[(df2.index >= '2019-01-01') & (df2.index <= '2020-02-01')].copy()\n",
         "    df_test2 = df2[(df2.index >= '2020-01-01') & (df2.index <= '2021-02-01')].copy()\n",
@@ -917,8 +921,8 @@
         "    X_test3, y_test3 = dp.generate_batch(df_test3, input_timesteps, output_timesteps,  input_variables, target_variables)\n",
         "\n",
         "    # Build LSTM Model using Tensorflow\n",
-        "    model = model_sample(neurons, output_timesteps, X_train.shape[1], X_train.shape[2], loss)\n",
-        "    # model = create_model(neurons, output_timesteps, X_train.shape[1], X_train.shape[2], loss)\n",
+        "    # model = model_sample(neurons, output_timesteps, X_train.shape[1], X_train.shape[2], loss)\n",
+        "    model = create_model(neurons, output_timesteps, X_train.shape[1], X_train.shape[2], loss)\n",
         "    # model = multi_layer_model(multi_neurons[0],multi_neurons[1],output_timesteps,X_train.shape[1], X_train.shape[2],loss)\n",
         "    # model = multi_layer_model(multi_neurons[0],multi_neurons[1],output_timesteps,X_train.shape[1], X_train.shape[2],loss)\n",
         "\n",
@@ -950,6 +954,8 @@
         "                              'Input Variables':[input_variables],\n",
         "                              'Target Variables':[target_variables],\n",
         "                              'Neurons':[neurons],\n",
+        "                              'Date Start':[date_range[0]],\n",
+        "                              'Date End':[date_range[1]],\n",
         "                              'Train Accuracy':[accuracy_score(train_result['true_bin'],train_result['pred_bin']).round(6)],\n",
         "                              'Train Recall':[recall_score(train_result['true_bin'],train_result['pred_bin']).round(6)],\n",
         "                              'Train F1 Score':[f1_score(train_result['true_bin'],train_result['pred_bin']).round(6)],\n",
@@ -965,7 +971,7 @@
         "                              'Data Points':len(df_test)})\n",
         "    grid = grid.append(res, ignore_index = True)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -985,7 +991,7 @@
       "source": [
         "grid.to_csv('grid_search_input_var_20210530.csv')"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1012,7 +1018,7 @@
         "    yaxis_title=\"Loss\")\n",
         "fig.show()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1099,7 +1105,7 @@
         "    yaxis_title=\"Accuracy\")\n",
         "fig.show()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1183,7 +1189,7 @@
         "_,_,test_result2 = generate_prediction(new_model,X_test2,y_test2,df_test2.index[(input_timesteps+output_timesteps-1):])\n",
         "_,_,test_result3 = generate_prediction(new_model,X_test3,y_test3,df_test3.index[(input_timesteps+output_timesteps-1):])"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1209,7 +1215,7 @@
         "conf_matrix = confusion_matrix(train_result['true_bin'], train_result['pred_bin'])[::-1]\n",
         "viz.display_confusion_matrix(conf_matrix, reverse_ylabel=True)"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1237,7 +1243,7 @@
       "source": [
         "print(classification_report(train_result['true_bin'],train_result['pred_bin'], target_names=['Negatives','Positives']))"
       ],
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1279,7 +1285,7 @@
         "conf_matrix2 = confusion_matrix(test_result['true_bin'],test_result['pred_bin'])[::-1]\n",
         "viz.display_confusion_matrix(conf_matrix2, reverse_ylabel=True)"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1307,7 +1313,7 @@
       "source": [
         "print(classification_report(test_result['pred_bin'], test_result['true_bin'], target_names=['Negatives','Positives']))"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
